--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.+'
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.7'
         classpath "org.springframework.boot:spring-boot-gradle-plugin:1.5.10.RELEASE"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
@@ -49,6 +48,7 @@ sourceSets {
         proto {
             // In addition to the default 'src/main/proto'
             srcDir 'specs/proto'
+            srcDir "$System.env.GOPATH/src/github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis"
         }
     }
 }
@@ -87,10 +87,14 @@ task execute(type:JavaExec) {
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-actuator"
-    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.springframework.boot:spring-boot-starter-data-jpa"
 
     compile "io.swagger:swagger-annotations:$swagger_annotations_version"
     compile "org.springframework:spring-web:$spring_web_version"
+
+    compile "org.flywaydb:flyway-core:5.2.1"
+    runtime "com.microsoft.sqlserver:sqljdbc4:4.0"
 
     compile "io.github.lognet:grpc-spring-boot-starter:3.0.0"
     compile "io.grpc:grpc-netty:$grpc_version"
@@ -101,5 +105,6 @@ dependencies {
     compile "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:$jackson_version"
     compile "com.fasterxml.jackson.datatype:jackson-datatype-joda:$jackson_version"
     compile "joda-time:joda-time:$jodatime_version"
+
     testCompile "junit:junit:$junit_version"
 }
