--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 security.basic.enabled=false
 management.security.enabled=false
+
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=grpc
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto=validate
