--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,15 @@ management.security.enabled=false
 
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=grpc
 spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.password=Bugbear123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=validate
+
+server.port=8081
+
+spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
