--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 security.basic.enabled=false
 management.security.enabled=false
 
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=grpc
-spring.datasource.username=sa
-spring.datasource.password=Bugbear123
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:mysql://localhost:3306/grpc
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=validate
 
+grpc.port=8080
 server.port=8081
 
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
