--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.jpa.hibernate.ddl-auto=validate
 grpc.port=8080
 server.port=8081
 
+upstream.basepath=http://localhost:8180/v1
+
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
 
 logging.level.org.hibernate.SQL=DEBUG
