--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,6 @@ version = '0.0.1-SNAPSHOT'
 buildscript {
     repositories {
         mavenCentral()
-        jcenter()
     }
     dependencies {
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.7'
@@ -17,7 +16,7 @@ buildscript {
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 ext {
@@ -47,7 +46,7 @@ sourceSets {
     main {
         proto {
             // In addition to the default 'src/main/proto'
-            srcDir "/home/afrizal/.go/src/github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis"
+            srcDir "$System.env.GOPATH/src/github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis"
         }
     }
 }
