--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,3 @@
-apply plugin: 'idea'
-apply plugin: 'eclipse'
-
-group = 'id.koneko096'
-version = '0.0.1-SNAPSHOT'
-
 buildscript {
     repositories {
         mavenCentral()
@@ -14,6 +8,17 @@ buildscript {
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
     }
 }
+
+plugins {
+    id "jacoco"
+    id "org.sonarqube" version "3.3"
+}
+
+apply plugin: 'idea'
+apply plugin: 'eclipse'
+
+group = 'id.koneko096'
+version = '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -36,9 +41,13 @@ apply plugin: 'maven'
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-install {
-    repositories.mavenInstaller {
-        pom.artifactId = 'grpc-http'
+jacoco {
+    toolVersion = "0.8.4"
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
     }
 }
 
@@ -83,6 +92,12 @@ task execute(type:JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
 }
 
+install {
+    repositories.mavenInstaller {
+        pom.artifactId = 'grpc-http'
+    }
+}
+
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-starter-web"
@@ -101,7 +116,9 @@ dependencies {
     compile "io.github.lognet:grpc-spring-boot-starter:3.0.0"
     compile "io.grpc:grpc-netty:$grpc_version"
 
-    compile "org.projectlombok:lombok:1.18.12"
+    compile "org.projectlombok:lombok:1.18.20"
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
     compile "com.fasterxml.jackson.core:jackson-core:$jackson_version"
     compile "com.fasterxml.jackson.core:jackson-annotations:$jackson_version"
     compile "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
@@ -110,4 +127,13 @@ dependencies {
     compile "joda-time:joda-time:$jodatime_version"
 
     testCompile "junit:junit:$junit_version"
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "koneko096_spring-grpc-example"
+        property "sonar.organization", "koneko096-github"
+        property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.exclusions", "src/main/protoGen,src/main/java/id/koneko096/grpc/invoker,src/main/java/id/koneko096/grpc/config"
+    }
 }
