--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Check out the repo
-      - name: Checkout
+      - name: Checkout Repo
         uses: actions/checkout@v2
+      - run: mkdir -p ~/.go/src
+      - name: Checkout Protobuf
+        uses: actions/checkout@v2
+        with:
+          repository: grpc-ecosystem/grpc-gateway
+          path: ~/.go/src/grpc-gateway
+          ref: refs/tags/v2.2.0
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
@@ -34,6 +40,7 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
       - name: Build and analyze
         env:
+          GOPATH: ~/.go
           # Needed to get some information about the pull request, if any
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # SonarCloud access token should be generated from https://sonarcloud.io/account/security/
