--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,12 +12,11 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
-      - run: mkdir -p ~/.go/src
       - name: Checkout Protobuf
         uses: actions/checkout@v2
         with:
           repository: grpc-ecosystem/grpc-gateway
-          path: ~/.go/src/grpc-gateway
+          path: ~/.go/src/github.com/grpc-ecosystem/grpc-gateway
           ref: refs/tags/v2.2.0
       - name: Set up JDK 11
         uses: actions/setup-java@v2
