--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ buildscript {
     dependencies {
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.7'
         classpath "org.springframework.boot:spring-boot-gradle-plugin:1.5.10.RELEASE"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
     }
 }
 
@@ -29,7 +28,6 @@ ext {
     jackson_version = "2.8.9"
     spring_web_version = "4.3.9.RELEASE"
     jodatime_version = "2.9.9"
-    junit_version = "4.12"
     grpc_version = "1.15.0"
 }
 
@@ -102,6 +100,7 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    compile "org.springframework.boot:spring-boot-starter-test"
 
     compile "io.swagger:swagger-annotations:$swagger_annotations_version"
     compile "org.springframework:spring-web:$spring_web_version"
@@ -126,7 +125,9 @@ dependencies {
     compile "com.fasterxml.jackson.datatype:jackson-datatype-joda:$jackson_version"
     compile "joda-time:joda-time:$jodatime_version"
 
-    testCompile "junit:junit:$junit_version"
+    runtimeOnly "com.h2database:h2"
+    implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
+    implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
 }
 
 sonarqube {
@@ -134,6 +135,6 @@ sonarqube {
         property "sonar.projectKey", "koneko096_spring-grpc-example"
         property "sonar.organization", "koneko096-github"
         property "sonar.host.url", "https://sonarcloud.io"
-        property "sonar.exclusions", "src/main/protoGen,src/main/java/id/koneko096/grpc/invoker/**/*,src/main/java/id/koneko096/grpc/config/*"
+        property "sonar.exclusions", "src/main/protoGen,src/main/java/id/koneko096/grpc/invoker/**/*,src/main/java/id/koneko096/grpc/client/*,src/main/java/id/koneko096/grpc/config/*,src/main/java/id/koneko096/grpc/data/model/Citizen.java,src/main/java/id/koneko096/grpc/CompanyGrpcApplication.java"
     }
 }
